--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
+:root {
+    --background: rgb(27, 27, 27);
+    --background2: rgb(15, 15, 15);
+    --accent: #FF4C4C;
+    --accent2: #ffde57
+}
+
 * {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Noto Sans", Arial, Helvetica, sans-serif;
     text-align: center;
     color: white;
 }
@@ -12,9 +19,9 @@ body {
     justify-content: center;
     align-items: center;
 
-    background: linear-gradient(rgb(27, 27, 27), rgb(15, 15, 15));
-    background-size: cover;
+    background: linear-gradient(var(--background), var(--background2));
     background-repeat: no-repeat;
+    background-attachment: fixed;
 
     height: auto;
 }
@@ -31,9 +38,9 @@ h1 {
 }
 
 a[href="https://turbowarp.org/"] {
-    color: #FF4C4C;
+    color: var(--accent);
 }
 
 a[href="https://python.org/"] {
-    color: #ffde57;
+    color: var(--accent2);
 }
